--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "landingpageadvanced",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "sasstocss": "node-sass sass/main.scss css/style.css -w"
+    "sasstocss": "node-sass sass/main.scss css/style.css"
   },
   "repository": {
     "type": "git",
@@ -17,6 +16,9 @@
   },
   "homepage": "https://github.com/vanlegithub/LandingPageAdvanced#readme",
   "dependencies": {
+  },
+  "description": "",
+  "devDependencies": {
     "node-sass": "^6.0.1"
   }
 }
